@@ -37,6 +37,7 @@ import org.eclipse.emf.ecore.EClass;
 import org.omg.sysml.lang.sysml.Association;
 import org.omg.sysml.lang.sysml.BindingConnector;
 import org.omg.sysml.lang.sysml.Connector;
+import org.omg.sysml.lang.sysml.CrossSubsetting;
 import org.omg.sysml.lang.sysml.DataType;
 import org.omg.sysml.lang.sysml.Element;
 import org.omg.sysml.lang.sysml.Expression;
@@ -52,8 +53,10 @@ import org.omg.sysml.lang.sysml.Redefinition;
 import org.omg.sysml.lang.sysml.ReferenceSubsetting;
 import org.omg.sysml.lang.sysml.Structure;
 import org.omg.sysml.lang.sysml.Subsetting;
+import org.omg.sysml.lang.sysml.SysMLFactory;
 import org.omg.sysml.lang.sysml.SysMLPackage;
 import org.omg.sysml.lang.sysml.Type;
+import org.omg.sysml.lang.sysml.TypeFeaturing;
 import org.omg.sysml.lang.sysml.impl.RedefinitionImpl;
 import org.omg.sysml.util.ConnectorUtil;
 import org.omg.sysml.util.ElementUtil;
@@ -234,16 +237,91 @@ public class FeatureAdapter extends TypeAdapter {
 	public void addDefaultGeneralType() {
 		super.addDefaultGeneralType();
 		
+		addBoundValueSubsetting();		
+		addParticipantSubsetting();		
+		addCrossingSpecialization();		
+		addOwnedCrossFeatureSpecialization();
+	}
+	
+	protected void addBoundValueSubsetting() {
 		Feature target = getTarget();
 		Feature result = getBoundValueResult();
 		if (result != null && target.getOwnedSpecialization().isEmpty() && target.getDirection() == null) {
 			addImplicitGeneralType(SysMLPackage.eINSTANCE.getSubsetting(), result);
 		}
-		
+	}
+	
+	protected void addParticipantSubsetting() {
 		if (isAssociationEnd() && 
 				!isImplicitSpecializationDeclaredFor(SysMLPackage.eINSTANCE.getRedefinition())) {
 			addDefaultGeneralType("participant");
 		}
+	}
+	
+	// checkFeatureCrossingSpecialization 
+	public void addCrossingSpecialization() {
+		Feature target = getTarget();
+		Feature ownedCrossFeature = FeatureUtil.getOwnedCrossFeatureOf(target);
+		if (ownedCrossFeature != null && target.getOwnedCrossSubsetting() == null && 
+				getImplicitGeneralTypesOnly(SysMLPackage.Literals.CROSS_SUBSETTING).isEmpty()) {
+			Type owningType = target.getOwningType();
+			if (owningType != null) {
+				List<Feature> endFeatures = owningType.getOwnedEndFeature();
+				if (endFeatures.size() == 2) {
+					Feature otherEnd = endFeatures.indexOf(target) == 0?
+							endFeatures.get(1): endFeatures.get(0);
+					addImplicitGeneralType(SysMLPackage.eINSTANCE.getCrossSubsetting(), 
+							FeatureUtil.chainFeatures(otherEnd, ownedCrossFeature));
+				} else {
+					Feature firstFeature = SysMLFactory.eINSTANCE.createFeature();
+					FeatureUtil.addFeaturingTypesTo(firstFeature, Collections.singleton(owningType));
+					
+					// Adding implicit general type here avoids circularity when adding cross-feature feature typing.
+					Feature featureChain = FeatureUtil.chainFeatures(firstFeature, ownedCrossFeature);
+					featureChain.getOwnedFeatureChaining().get(0).getOwnedRelatedElement().add(firstFeature);
+					addImplicitGeneralType(SysMLPackage.eINSTANCE.getCrossSubsetting(), featureChain);
+					
+					FeatureUtil.addOwnedCrossFeatureTypeFeaturingTo(ownedCrossFeature);
+					for (Type type: ownedCrossFeature.getFeaturingType()) {
+						FeatureTyping featureTyping = SysMLFactory.eINSTANCE.createFeatureTyping();
+						featureTyping.setType(type);
+						firstFeature.getOwnedRelationship().add(featureTyping);						
+					}
+				}
+			}
+		}
+	}
+	 
+	protected void addOwnedCrossFeatureSpecialization() {
+		Feature target = getTarget();
+		Namespace owner = target.getOwningNamespace();
+		if (FeatureUtil.isOwnedCrossFeature(target)) {
+			// checkFeatureOwnedCrossFeatureSpecialization
+			for (Type type: ((Feature)owner).getType()) {
+				addImplicitGeneralType(SysMLPackage.eINSTANCE.getFeatureTyping(), type);
+			}
+			
+			// checkFeatureOwnedCrossFeatureRedefinitionSpecialization
+			for (Feature redefinedFeature: FeatureUtil.getRedefinedFeaturesWithComputedOf((Feature)owner, null)) {
+				if (redefinedFeature.isEnd()) {
+					Feature crossFeature = getCrossFeatureOf(redefinedFeature);
+					if (crossFeature != null) {
+						addImplicitGeneralType(SysMLPackage.eINSTANCE.getSubsetting(), crossFeature);
+					}
+				}
+			}
+		}
+	}
+	
+	public static Feature getCrossFeatureOf(Feature feature) {
+		Feature crossFeature = feature.getCrossFeature();
+		if (crossFeature == null) {
+			ElementUtil.transform(feature);
+			crossFeature = FeatureUtil.getBasicFeatureOf(
+					(Feature)TypeUtil.getImplicitGeneralTypesOnly(feature, SysMLPackage.eINSTANCE.getCrossSubsetting()).stream().
+					findFirst().orElse(null));
+		}
+		return crossFeature;
 	}
 	
 	@Override
@@ -321,11 +399,13 @@ public class FeatureAdapter extends TypeAdapter {
 				map(Feature.class::cast);
 		Stream<Feature> implicitReferencedFeatures = getImplicitGeneralTypesOnly(SysMLPackage.Literals.REFERENCE_SUBSETTING).stream().
 				map(Feature.class::cast);
+		Stream<Feature> implicitCrossedFeatures = getImplicitGeneralTypesOnly(SysMLPackage.Literals.CROSS_SUBSETTING).stream().
+				map(Feature.class::cast);
 		Stream<Feature> ownedSubsettedFeatures = target.getOwnedSubsetting().stream().
 				filter(s->!(s instanceof Redefinition)).
 				map(Subsetting::getSubsettedFeature).
 				filter(f->f != null);
-		return Stream.concat(ownedSubsettedFeatures, Stream.concat(implicitReferencedFeatures,implicitSubsettedFeatures));
+		return Stream.concat(ownedSubsettedFeatures, Stream.concat(implicitReferencedFeatures, Stream.concat(implicitCrossedFeatures, implicitSubsettedFeatures)));
 	}
 	
 	public List<Feature> getSubsettedFeatures() {
@@ -338,7 +418,25 @@ public class FeatureAdapter extends TypeAdapter {
 		Stream<Feature> implicitRedefinedFeatures = getImplicitGeneralTypesOnly(SysMLPackage.Literals.REDEFINITION).stream().
 				map(Feature.class::cast);		
 		return Stream.concat(Stream.concat(subsettedFeatures, ownedRedefinedFeatures), implicitRedefinedFeatures).
-				collect(Collectors.toList());
+				toList();
+	}
+	
+	public List<Feature> getSubsettedNotCrossedFeatures() {
+		computeImplicitGeneralTypes();
+		Feature target = getTarget();
+		List<Feature> features = new ArrayList<>();
+		target.getOwnedSubsetting().stream().
+				filter(s->!(s instanceof CrossSubsetting)).
+				map(Subsetting::getSubsettedFeature).
+				filter(f->f != null).
+				forEachOrdered(features::add);
+		getImplicitGeneralTypesOnly(SysMLPackage.Literals.SUBSETTING).stream().
+			map(Feature.class::cast).forEachOrdered(features::add);
+		getImplicitGeneralTypesOnly(SysMLPackage.Literals.REFERENCE_SUBSETTING).stream().
+			map(Feature.class::cast).forEachOrdered(features::add);
+		getImplicitGeneralTypesOnly(SysMLPackage.Literals.REDEFINITION).stream().
+			map(Feature.class::cast).forEachOrdered(features::add);		
+		return features;
 	}
 	
 	public Feature getReferencedFeature() {
@@ -353,6 +451,18 @@ public class FeatureAdapter extends TypeAdapter {
 		}
 	}
 	
+	public Feature getCrossedFeature() {
+		Feature target = getTarget();
+		CrossSubsetting ownedCrossSubsetting = target.getOwnedCrossSubsetting();
+		if (ownedCrossSubsetting != null) {
+			return ownedCrossSubsetting.getCrossedFeature();
+		} else {
+			computeImplicitGeneralTypes();
+			return getImplicitGeneralTypesOnly(SysMLPackage.Literals.CROSS_SUBSETTING).stream().
+					map(Feature.class::cast).findFirst().orElse(null);
+		}
+	}
+	
 	public List<Feature> getRedefinedFeatures() {
 		Feature target = getTarget();
 		computeImplicitGeneralTypes();
@@ -361,8 +471,7 @@ public class FeatureAdapter extends TypeAdapter {
 		Stream<Feature> ownedRedefinedFeatures = target.getOwnedRedefinition().stream().
 				map(Redefinition::getRedefinedFeature).
 				filter(f->f != null);
-		return Stream.concat(ownedRedefinedFeatures, implicitRedefinedFeatures).
-				collect(Collectors.toList());
+		return Stream.concat(ownedRedefinedFeatures, implicitRedefinedFeatures).toList();
 	}
 	
 	/**
@@ -593,11 +702,75 @@ public class FeatureAdapter extends TypeAdapter {
 		}
 	}
 	
+	// checkFeatureOwnedCrossFeatureTypeFeaturing
+	public void addOwnedCrossFeatureTypeFeaturing() {
+		Feature target = getTarget();
+		if (FeatureUtil.isOwnedCrossFeature(target) && target.getOwnedTypeFeaturing().isEmpty() && isImplicitFeaturingTypesEmpty()) {
+			Feature owningFeature = (Feature)target.getOwner();
+			Type ownerOwningType = owningFeature.getOwningType();
+			if (ownerOwningType != null) {
+				List<Feature> endFeatures = ownerOwningType.getEndFeature();
+				int n = endFeatures.size();
+				if (n == 2) {
+					Feature otherEnd = endFeatures.get(1 - endFeatures.indexOf(owningFeature));
+					addFeaturingTypes(otherEnd.getType());
+				} else if (n > 2) {
+					Feature cartesianProductFeature = SysMLFactory.eINSTANCE.createFeature();
+					
+					for (Feature otherEnd: endFeatures) {
+						if (otherEnd != owningFeature) {
+							List<Type> crossFeatureTypes = otherEnd.getType();
+							if (crossFeatureTypes.isEmpty()) {
+								crossFeatureTypes = Collections.singletonList(getLibraryType("Base::Anything"));
+							}							
+							if (cartesianProductFeature.getOwnedTypeFeaturing().isEmpty()) {
+								for (Type crossFeatureType: crossFeatureTypes) {
+									FeatureUtil.addTypeFeaturingTo(cartesianProductFeature).
+										setFeaturingType(crossFeatureType);
+								}
+							} else {
+								if (!cartesianProductFeature.getOwnedTyping().isEmpty()) {
+									Feature previousCartesianProductFeature = cartesianProductFeature;
+									cartesianProductFeature = SysMLFactory.eINSTANCE.createFeature();
+									TypeFeaturing typeFeaturing = FeatureUtil.addTypeFeaturingTo(cartesianProductFeature);
+									typeFeaturing.setFeaturingType(previousCartesianProductFeature);
+									typeFeaturing.getOwnedRelatedElement().add(previousCartesianProductFeature);
+								}
+								for (Type crossFeatureType: crossFeatureTypes) {
+									FeatureUtil.addFeatureTypingTo(cartesianProductFeature).
+										setType(crossFeatureType);
+								}
+							}
+						}
+					}
+					
+					addFeaturingType(cartesianProductFeature);
+
+					for (Feature redefinedFeature: FeatureUtil.getRedefinedFeaturesWithComputedOf(owningFeature, null)) {
+						if (redefinedFeature.isEnd()) {
+							Feature crossFeature = getCrossFeatureOf(redefinedFeature);
+							if (crossFeature != null) {
+								FeatureUtil.addOwnedCrossFeatureTypeFeaturingTo(crossFeature);
+								for (Type featuringType: crossFeature.getFeaturingType()) {
+									if (featuringType instanceof Feature) {
+										FeatureUtil.addSubsettingTo(cartesianProductFeature).
+											setSubsettedFeature((Feature)featuringType);
+									}
+								}
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+	
 	@Override
 	public void doTransform() {
 		computeValueConnector();
 		forceComputeRedefinitions();
 		super.doTransform();
+		addOwnedCrossFeatureTypeFeaturing();
 	}
 
 }
